Closed
Bug 1045461
Opened 12 years ago
Closed 12 years ago
Failed to build Vixen with m-c Gecko, BluetoothServiceBluedroid.cpp:204:5: error: invalid conversion from 'void (*)()' to 'void (*)(mozilla::dom::bluetooth::BluetoothProfileResultHandler*)'
Categories
(Firefox OS Graveyard :: Bluetooth, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
2.1 S1 (1aug)
People
(Reporter: vicamo, Assigned: tzimmermann)
References
Details
(Whiteboard: [vixen])
Attachments
(2 files)
|
2.42 KB,
patch
|
shawnjohnjr
:
review+
vicamo
:
feedback+
|
Details | Diff | Splinter Review |
|
2.44 KB,
patch
|
ben.tian
:
review+
|
Details | Diff | Splinter Review |
../../../gecko/dom/bluetooth/bluedroid/BluetoothServiceBluedroid.cpp: In member function 'virtual nsresult CleanupTask::Run()':
../../../gecko/dom/bluetooth/bluedroid/BluetoothServiceBluedroid.cpp:204:5: error: invalid conversion from 'void (*)()' to 'void (*)(mozilla::dom::bluetooth::BluetoothProfileResultHandler*)' [-fpermissive]
../../../gecko/dom/bluetooth/bluedroid/BluetoothServiceBluedroid.cpp: In function 'void RemoteDevicePropertiesCallback(bt_status_t, bt_bdaddr_t*, int, bt_property_t*)':
../../../gecko/dom/bluetooth/bluedroid/BluetoothServiceBluedroid.cpp:569:18: warning: pointer of type 'void *' used in arithmetic [-Wpointer-arith]
../../../gecko/dom/bluetooth/bluedroid/BluetoothServiceBluedroid.cpp: In member function 'virtual void InitResultHandler::Init()':
../../../gecko/dom/bluetooth/bluedroid/BluetoothServiceBluedroid.cpp:911:5: error: invalid conversion from 'void (*)()' to 'void (*)(mozilla::dom::bluetooth::BluetoothProfileResultHandler*)' [-fpermissive]
Assignee: nobody → tzimmermann
Comment 1•12 years ago
|
||
This should be vixen issue, modify the dependency and whiteboard tag.
| Assignee | ||
Comment 2•12 years ago
|
||
Vicamo,
Does this patch fix the problem? I don't have a tablet; can't test.
Attachment #8463847 -
Flags: review?(shuang)
Attachment #8463847 -
Flags: feedback?(vyang)
| Assignee | ||
Comment 3•12 years ago
|
||
Same patch for bluetooth2/
Attachment #8463848 -
Flags: review?(btian)
Comment 4•12 years ago
|
||
Comment on attachment 8463848 [details] [diff] [review]
[02] Bug 1045461: Fix HFP fallback code to work with latest Bluetooth changes (under bluetooth2/)
Review of attachment 8463848 [details] [diff] [review]:
-----------------------------------------------------------------
LGTM.
Attachment #8463848 -
Flags: review?(btian) → review+
| Reporter | ||
Comment 5•12 years ago
|
||
Comment on attachment 8463847 [details] [diff] [review]
[01] Bug 1045461: Fix HFP fallback code to work with latest Bluetooth changes
Review of attachment 8463847 [details] [diff] [review]:
-----------------------------------------------------------------
Thank you for the quick fix :)
Attachment #8463847 -
Flags: feedback?(vyang) → feedback+
Attachment #8463847 -
Flags: review?(shuang) → review+
| Assignee | ||
Comment 6•12 years ago
|
||
Thanks a lot! This got delayed a bit by b2g-inbound being closed, but should land now.
https://hg.mozilla.org/integration/b2g-inbound/rev/fd7b28405e87
https://hg.mozilla.org/integration/b2g-inbound/rev/447914859ecd
https://tbpl.mozilla.org/?tree=B2g-Inbound&rev=447914859ecd
https://hg.mozilla.org/mozilla-central/rev/fd7b28405e87
https://hg.mozilla.org/mozilla-central/rev/447914859ecd
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → 2.1 S1 (1aug)
You need to log in
before you can comment on or make changes to this bug.
Description
•