dom/bluetooth2/bluedroid/hfp-fallback/BluetoothHfpManager.h
@@ -30,8 +30,8 @@ public:
 
   static BluetoothHfpManager* Get();
   virtual ~BluetoothHfpManager() { }
-  static void InitHfpInterface();
-  static void DeinitHfpInterface();
+  static void InitHfpInterface(BluetoothProfileResultHandler* aRes);
+  static void DeinitHfpInterface(BluetoothProfileResultHandler* aRes);
 
   bool ConnectSco();
   bool DisconnectSco();
